# sendmm

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.txt  main.cpp  sample.conf
conf/: sample.conf
src/: main.cpp
